# TripPlanner_Agentic_AI

./: .env  README.md  pyproject.toml  setup.py
examples/: plan_trip.py
src/travel_planner/: __init__.py  main.py
src/travel_planner/agents/: manager_agent.py
src/travel_planner/models/: __init__.py  trip.py
